Some fixes to the website

--- a/website/templates/parts/meta.hbs
+++ b/website/templates/parts/meta.hbs
@@ -16,6 +16,6 @@
 {{~#with context.page.frontMatter.description}}
     <meta name="twitter:description" content="{{this}}" />
 {{~/with}}
-<meta name="twitter:title" content="{{~> title ~}}" />
+<meta name="twitter:title" content="{{~> parts/title ~}}" />
 <meta name="twitter:site" content="@ctron" />
 <meta name="twitter:creator" content="@ctron" />
