--- a/website/templates/parts/meta.hbs
+++ b/website/templates/parts/meta.hbs
@@ -7,7 +7,12 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:url" content="{{ absolute_url "" }}" />
 <meta property="og:site_name" content="{{ compact.site.title }}" />
+<meta property="og:title" content="{{~> parts/title ~}}" />
+<meta property="og:type" content="article" />
 <meta property="og:updated_time" content="{{~> parts/meta/update_timestamp ~}}" />
+{{~#with context.page.frontMatter.description}}
+    <meta name="og:description" content="{{this}}" />
+{{~/with}}
 
 <meta property="article:published_time" content="{{~> parts/meta/publish_timestamp ~}}" />
 <meta property="article:modified_time" content="{{~> parts/meta/update_timestamp ~}}" />
