Start working on documentation

--- a/website/templates/default.hbs
+++ b/website/templates/default.hbs
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="{{ relative_url "/assets/bootstrap/bootstrap.min.css" }}">
-    <link rel="stylesheet" href="{{ relative_url "/assets/custom/styles.css" }}">
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
+    <link rel="stylesheet" href="{{ relative_url "/assets/custom.css" }}">
 
     {{~> parts/meta}}
 
