--- a/website/templates/parts/main.hbs
+++ b/website/templates/parts/main.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     {{#if (eq context.page.metadata.type "md")}}
-        {{ expand ( markdownify context.content) }}
+        {{ markdownify ( expand context.content) }}
     {{else}}
         {{ expand context.content }}
     {{/if}}
