--- a/website/templates/parts/meta/publish_timestamp.hbs
+++ b/website/templates/parts/meta/publish_timestamp.hbs
@@ -1,1 +1,3 @@
-{{~ timestamp "%Y-%m-%dT%H:%M:%S%:z" context.timestamp.published ~}}
+{{~#with context.timestamp.published}}
+{{~ timestamp "%Y-%m-%dT%H:%M:%S%:z" this ~}}
+{{/with~}}
