Some more cleanups

--- a/website/templates/default.hbs
+++ b/website/templates/default.hbs
@@ -20,12 +20,12 @@
 
 <body>
 
-<header class="mb-5">
+<header class="mb-2">
     {{~> parts/header}}
 </header>
 
 <main id="main" role="main">
-    {{~> parts/main}}
+    {{#> main }}{{~> parts/main}}{{/main}}
 </main>
 
 <footer class="mt-5 py-5">
