--- a/website/templates/parts/header.hbs
+++ b/website/templates/parts/header.hbs
@@ -1,5 +1,5 @@
 
-<nav class="container navbar navbar-expand-lg navbar-light bg-light mt-3">
+<nav class="container-fluid navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{{ relative_url "/" }}">Hagen</a>
     <button class="navbar-toggler" type="button"
             data-toggle="collapse" data-target="#navbarNav"
@@ -19,6 +19,6 @@
     </div>
 </nav>
 
-<div class="container py-4">
+<div class="container-fluid py-4">
     {{> parts/heading }}
 </div>
