--- a/website/templates/parts/main.hbs
+++ b/website/templates/parts/main.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     {{#if (eq context.page.metadata.type "md")}}
         {{ markdownify ( expand context.content) }}
     {{else}}
