--- a/website/templates/documentation.hbs
+++ b/website/templates/documentation.hbs
@@ -1,1 +1,15 @@
+{{#*inline "main"}}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 col-lg-2">
+            {{> doc/index idx=full.content.documentation }}
+        </div>
+        <div class="col-md-9 col-lg-10">
+            {{> parts/main }}
+        </div>
+    </div>
+</div>
+
+{{/inline}}
+
 {{~> default }}
